Changes on ID, createassignment e createClass